[package]
name = "rename-for-linux-limit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
config = "0.14.0"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"
unicode-normalization = "0.1.23"
