[package]
name = "rename-for-linux-limit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
env_logger = "0.11.5"
jdt = { git = "ssh://git@github.com/amachang/jdt.git", version = "0.1.0" }
libc = "0.2.158"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
unicode-normalization = "0.1.23"
